[gd_scene load_steps=9 format=3 uid="uid://ckemcw11b6dgh"]

[ext_resource type="Script" uid="uid://bjna1tqemslqx" path="res://Scenes/shop_ui.gd" id="1_60nai"]
[ext_resource type="PackedScene" uid="uid://bcdra6jg7e18s" path="res://Inventory/shopping_inv_ui.tscn" id="2_o75od"]
[ext_resource type="FontFile" uid="uid://byj2p0422aock" path="res://Assets/RocketDoodleRegular-lxRYd.ttf" id="3_a7r41"]
[ext_resource type="Texture2D" uid="uid://01fjky1v4oqj" path="res://Assets/weapons/shotgunshop.png" id="4_v6quj"]
[ext_resource type="Texture2D" uid="uid://bhijjupdjy8sb" path="res://Assets/weapons/akshop.png" id="5_60nai"]
[ext_resource type="Texture2D" uid="uid://biwxatrck5fhq" path="res://Assets/weapons/launchershop.png" id="6_jjsl5"]
[ext_resource type="Texture2D" uid="uid://diadydfi0y6di" path="res://Assets/weapons/grenade.png" id="7_ktnr1"]
[ext_resource type="AudioStream" uid="uid://ce6v0leblb7ru" path="res://Assets/BuySFX.wav" id="8_ewckf"]

[node name="ShopUI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_60nai")

[node name="Panel" type="Panel" parent="."]
offset_left = 239.0
offset_top = 150.0
offset_right = 1159.0
offset_bottom = 650.0
mouse_filter = 2

[node name="TabBar" type="TabBar" parent="."]
offset_left = 239.0
offset_top = 63.0
offset_right = 560.0
offset_bottom = 151.0
theme_override_font_sizes/font_size = 50
current_tab = 0
tab_count = 2
tab_0/title = "Buy"
tab_1/title = "Sell"

[node name="ShoppingInvUI" parent="." instance=ExtResource("2_o75od")]
visible = false
offset_left = 367.0
offset_top = 248.0
offset_right = 454.0
offset_bottom = 296.0

[node name="BuyArea" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Shotgun" type="Control" parent="BuyArea"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="BuyArea/Shotgun"]
layout_mode = 0
offset_left = 280.0
offset_top = 178.0
offset_right = 540.0
offset_bottom = 393.0
color = Color(0, 0, 0, 0.588235)

[node name="Name" type="Label" parent="BuyArea/Shotgun"]
layout_mode = 0
offset_left = 334.0
offset_top = 192.0
offset_right = 494.0
offset_bottom = 248.0
theme_override_fonts/font = ExtResource("3_a7r41")
theme_override_font_sizes/font_size = 50
text = "Shotgun"

[node name="Price" type="Label" parent="BuyArea/Shotgun"]
layout_mode = 0
offset_left = 309.0
offset_top = 332.0
offset_right = 382.0
offset_bottom = 377.0
theme_override_fonts/font = ExtResource("3_a7r41")
theme_override_font_sizes/font_size = 40
text = "$100"

[node name="BuyShotgun" type="Button" parent="BuyArea/Shotgun"]
layout_mode = 0
offset_left = 419.0
offset_top = 326.0
offset_right = 511.0
offset_bottom = 384.0
theme_override_fonts/font = ExtResource("3_a7r41")
theme_override_font_sizes/font_size = 40
text = "Buy"

[node name="Icon" type="TextureRect" parent="BuyArea/Shotgun"]
layout_mode = 0
offset_left = 297.0
offset_top = 211.0
offset_right = 1588.0
offset_bottom = 984.0
scale = Vector2(0.18, 0.18)
mouse_filter = 2
texture = ExtResource("4_v6quj")

[node name="Ak47" type="Control" parent="BuyArea"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="BuyArea/Ak47"]
layout_mode = 0
offset_left = 280.0
offset_top = 409.0
offset_right = 540.0
offset_bottom = 624.0
color = Color(0, 0, 0, 0.588235)

[node name="Name" type="Label" parent="BuyArea/Ak47"]
layout_mode = 0
offset_left = 333.0
offset_top = 418.0
offset_right = 493.0
offset_bottom = 474.0
theme_override_fonts/font = ExtResource("3_a7r41")
theme_override_font_sizes/font_size = 50
text = "AK47"
horizontal_alignment = 1

[node name="Price" type="Label" parent="BuyArea/Ak47"]
layout_mode = 0
offset_left = 308.0
offset_top = 558.0
offset_right = 381.0
offset_bottom = 603.0
theme_override_fonts/font = ExtResource("3_a7r41")
theme_override_font_sizes/font_size = 40
text = "$150"

[node name="BuyAK47" type="Button" parent="BuyArea/Ak47"]
layout_mode = 0
offset_left = 418.0
offset_top = 552.0
offset_right = 510.0
offset_bottom = 610.0
theme_override_fonts/font = ExtResource("3_a7r41")
theme_override_font_sizes/font_size = 40
text = "Buy"

[node name="Icon" type="TextureRect" parent="BuyArea/Ak47"]
layout_mode = 0
offset_left = 296.0
offset_top = 437.0
offset_right = 1587.0
offset_bottom = 1210.0
scale = Vector2(0.18, 0.18)
mouse_filter = 2
texture = ExtResource("5_60nai")

[node name="GrenadeLauncher" type="Control" parent="BuyArea"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="BuyArea/GrenadeLauncher"]
layout_mode = 0
offset_left = 561.0
offset_top = 178.0
offset_right = 821.0
offset_bottom = 393.0
color = Color(0, 0, 0, 0.588235)

[node name="Name" type="Label" parent="BuyArea/GrenadeLauncher"]
layout_mode = 0
offset_left = 544.0
offset_top = 192.0
offset_right = 832.0
offset_bottom = 248.0
theme_override_fonts/font = ExtResource("3_a7r41")
theme_override_font_sizes/font_size = 30
text = "Grenade Launcher"
horizontal_alignment = 1

[node name="Price" type="Label" parent="BuyArea/GrenadeLauncher"]
layout_mode = 0
offset_left = 588.0
offset_top = 331.0
offset_right = 661.0
offset_bottom = 376.0
theme_override_fonts/font = ExtResource("3_a7r41")
theme_override_font_sizes/font_size = 40
text = "$300"

[node name="BuyGrenadeLauncher" type="Button" parent="BuyArea/GrenadeLauncher"]
layout_mode = 0
offset_left = 698.0
offset_top = 325.0
offset_right = 790.0
offset_bottom = 383.0
theme_override_fonts/font = ExtResource("3_a7r41")
theme_override_font_sizes/font_size = 40
text = "Buy"

[node name="Icon" type="TextureRect" parent="BuyArea/GrenadeLauncher"]
layout_mode = 0
offset_left = 576.0
offset_top = 198.0
offset_right = 1867.0
offset_bottom = 971.0
scale = Vector2(0.18, 0.18)
mouse_filter = 2
texture = ExtResource("6_jjsl5")

[node name="SpeedBoots" type="Control" parent="BuyArea"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="BuyArea/SpeedBoots"]
layout_mode = 0
offset_left = 561.0
offset_top = 409.0
offset_right = 821.0
offset_bottom = 624.0
color = Color(0, 0, 0, 0.588235)

[node name="Name" type="Label" parent="BuyArea/SpeedBoots"]
layout_mode = 0
offset_left = 543.0
offset_top = 424.0
offset_right = 831.0
offset_bottom = 480.0
theme_override_fonts/font = ExtResource("3_a7r41")
theme_override_font_sizes/font_size = 30
text = "Speed booooots"
horizontal_alignment = 1

[node name="Price" type="Label" parent="BuyArea/SpeedBoots"]
layout_mode = 0
offset_left = 587.0
offset_top = 563.0
offset_right = 668.0
offset_bottom = 608.0
theme_override_fonts/font = ExtResource("3_a7r41")
theme_override_font_sizes/font_size = 40
text = "$200"

[node name="BuySpeedBoots" type="Button" parent="BuyArea/SpeedBoots"]
layout_mode = 0
offset_left = 697.0
offset_top = 557.0
offset_right = 789.0
offset_bottom = 615.0
theme_override_fonts/font = ExtResource("3_a7r41")
theme_override_font_sizes/font_size = 40
text = "Buy"

[node name="Icon" type="TextureRect" parent="BuyArea/SpeedBoots"]
layout_mode = 0
offset_left = 575.0
offset_top = 430.0
offset_right = 1866.0
offset_bottom = 1203.0
scale = Vector2(0.18, 0.18)
mouse_filter = 2
texture = ExtResource("6_jjsl5")

[node name="Grenade" type="Control" parent="BuyArea"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="BuyArea/Grenade"]
layout_mode = 0
offset_left = 856.0
offset_top = 177.0
offset_right = 1116.0
offset_bottom = 392.0
color = Color(0, 0, 0, 0.588235)

[node name="Name" type="Label" parent="BuyArea/Grenade"]
layout_mode = 0
offset_left = 900.0
offset_top = 186.0
offset_right = 1065.0
offset_bottom = 242.0
theme_override_fonts/font = ExtResource("3_a7r41")
theme_override_font_sizes/font_size = 50
text = "Grenade"
horizontal_alignment = 1

[node name="Price" type="Label" parent="BuyArea/Grenade"]
layout_mode = 0
offset_left = 883.0
offset_top = 329.0
offset_right = 956.0
offset_bottom = 374.0
theme_override_fonts/font = ExtResource("3_a7r41")
theme_override_font_sizes/font_size = 40
text = "$15"

[node name="BuyGrenade" type="Button" parent="BuyArea/Grenade"]
layout_mode = 0
offset_left = 993.0
offset_top = 323.0
offset_right = 1085.0
offset_bottom = 381.0
theme_override_fonts/font = ExtResource("3_a7r41")
theme_override_font_sizes/font_size = 40
text = "Buy"

[node name="Icon" type="TextureRect" parent="BuyArea/Grenade"]
layout_mode = 0
offset_left = 918.0
offset_top = 203.0
offset_right = 1618.0
offset_bottom = 903.0
scale = Vector2(0.18, 0.18)
mouse_filter = 2
texture = ExtResource("7_ktnr1")

[node name="BuySFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_ewckf")
volume_db = -10.0
bus = &"SFX"

[connection signal="tab_changed" from="TabBar" to="." method="_on_tab_bar_tab_changed"]
[connection signal="pressed" from="BuyArea/Shotgun/BuyShotgun" to="." method="_on_buy_shotgun_pressed"]
[connection signal="pressed" from="BuyArea/Ak47/BuyAK47" to="." method="_on_buy_ak_47_pressed"]
[connection signal="pressed" from="BuyArea/GrenadeLauncher/BuyGrenadeLauncher" to="." method="_on_buy_grenade_launcher_pressed"]
[connection signal="pressed" from="BuyArea/SpeedBoots/BuySpeedBoots" to="." method="_on_buy_speed_boots_pressed"]
[connection signal="pressed" from="BuyArea/Grenade/BuyGrenade" to="." method="_on_buy_grenade_pressed"]
